log
Thu 18 Aug 2022 01:06:54 AM UTC: 
 tests:  0|6
total_score: 0/70
9011fc6
Thu 18 Aug 2022 01:22:35 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e7e786
Thu 18 Aug 2022 01:34:54 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   39 |   if (!list -> head)
      |   ^~
list.c:41:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   41 |     return (list->head->data);
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4844c86
Thu 18 Aug 2022 01:48:32 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
bb92d4b
Thu 18 Aug 2022 01:49:13 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0751387
Thu 18 Aug 2022 01:49:53 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb33397
Thu 18 Aug 2022 01:51:37 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:28: error: expected ‘;’ before ‘}’ token
   42 |   return (list->head->data)
      |                            ^
      |                            ;
   43 | }
      | ~                           
Compilation failed
ce3844a
Thu 18 Aug 2022 01:51:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e7ba282
